--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -8,9 +8,11 @@ $color-main:lighten(#2980b9,10%);
 $color-main:#FFBB00;//yellow
 $color-main:#E96B56;//red-rosa
 $color-main:#EB8A48;//orange-brown
-$color-main:#E4582A;//
-$color-main:#EF6701;//
-$color-main:#FF7200;//
+$color-main:#FF7200;//orange
+$color-main:#E4582A;//red
+$color-main:#59A029;//dark green
+$color-main:#54AE3E;//green
+
 
 
 $color-secondary: #f1c40f;
