--- a/css/main.css
+++ b/css/main.css
@@ -476,7 +476,7 @@ SUPER SLICK TRANSFORMS
 /* line 1, ../sass/_welcome.scss */
 .welcome-mast {
   color: white;
-  background: #ff7200;
+  background: #54ae3e;
   color: black;
   text-align: center;
   position: relative;
@@ -669,6 +669,7 @@ SUPER SLICK TRANSFORMS
   padding: 5em 1em 4em;
   margin-bottom: -2em;
   overflow-y: auto;
+  opacity: 0;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -ms-transition: all .3s ease-in-out;
@@ -687,44 +688,41 @@ SUPER SLICK TRANSFORMS
   width: 15em;
   z-index: 900;
   opacity: 1;
-  background: white;
-  box-shadow: .3em .3em 2.5em lightgrey;
-}
-/* line 39, ../sass/_sidebar.scss */
-.fixed-sidebar:hover {
-  opacity: 1;
-}
-/* line 41, ../sass/_sidebar.scss */
-.fixed-sidebar:hover .online-users-count {
-  opacity: 1 !important;
+  box-shadow: 3em 0em 4em 0em lightgrey;
 }
 
-/* line 47, ../sass/_sidebar.scss */
-.csstransforms .fixed-sidebar.show {
-  -webkit-transform: translateX(13em);
-  -moz-transform: translateX(13em);
-  -o-transform: translateX(13em);
-  -ms-transform: translateX(13em);
-  transform: translateX(13em);
+@media all and (max-width: 56em) {
+  /* line 49, ../sass/_sidebar.scss */
+  .csstransforms .fixed-sidebar.show {
+    -webkit-transform: translateX(13em);
+    -moz-transform: translateX(13em);
+    -o-transform: translateX(13em);
+    -ms-transform: translateX(13em);
+    transform: translateX(13em);
+    background: white;
+  }
 }
 
-/* line 57, ../sass/_sidebar.scss */
-.no-csstransforms .fixed-sidebar.show {
-  left: 0 !important;
+@media all and (max-width: 56em) {
+  /* line 62, ../sass/_sidebar.scss */
+  .no-csstransforms .fixed-sidebar.show {
+    left: 0 !important;
+    background: white;
+  }
 }
 
-/* line 63, ../sass/_sidebar.scss */
+/* line 69, ../sass/_sidebar.scss */
 .userinfo {
   text-align: center;
 }
-/* line 65, ../sass/_sidebar.scss */
+/* line 71, ../sass/_sidebar.scss */
 .userinfo .user-avatar {
   height: 3em;
   border: 1px solid black;
   border-radius: 50%;
   overflow: hidden;
 }
-/* line 72, ../sass/_sidebar.scss */
+/* line 78, ../sass/_sidebar.scss */
 .userinfo .user-username {
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -732,14 +730,14 @@ SUPER SLICK TRANSFORMS
   display: block;
 }
 
-/* line 80, ../sass/_sidebar.scss */
+/* line 86, ../sass/_sidebar.scss */
 #logout, #toggleRealtime {
   float: left;
   margin-left: 0.3em;
   margin-top: 0.6em;
 }
 
-/* line 90, ../sass/_sidebar.scss */
+/* line 96, ../sass/_sidebar.scss */
 .realtime-image {
   height: 1.3em;
   width: 1.3em;
@@ -747,14 +745,14 @@ SUPER SLICK TRANSFORMS
   margin-bottom: -.325em;
 }
 
-/* line 98, ../sass/_sidebar.scss */
+/* line 104, ../sass/_sidebar.scss */
 .online-users {
   margin-top: 2em;
   text-align: left;
   list-style-type: none;
 }
 
-/* line 103, ../sass/_sidebar.scss */
+/* line 109, ../sass/_sidebar.scss */
 .online-user {
   display: block;
   text-overflow: ellipsis;
@@ -763,19 +761,19 @@ SUPER SLICK TRANSFORMS
   color: #444;
 }
 
-/* line 111, ../sass/_sidebar.scss */
+/* line 117, ../sass/_sidebar.scss */
 .online-users {
   float: right;
   width: 100%;
 }
 
-/* line 116, ../sass/_sidebar.scss */
+/* line 122, ../sass/_sidebar.scss */
 .online-users-count {
   color: white;
   font-weight: bold;
   font-family: 'Source Sans Pro', sans-serif;
   padding: .5em .8em .5em;
-  background: #ff7200;
+  background: #54ae3e;
   display: inline-block;
   border-radius: 50%;
   position: fixed;
@@ -795,7 +793,7 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 56em) {
-  /* line 116, ../sass/_sidebar.scss */
+  /* line 122, ../sass/_sidebar.scss */
   .online-users-count {
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
@@ -804,35 +802,34 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 151, ../sass/_sidebar.scss */
+/* line 157, ../sass/_sidebar.scss */
 .toggle-sidebar {
-  display: none;
   cursor: pointer;
   left: 0;
   top: .5em;
   position: fixed;
   height: 3.33em;
   width: 3.33em;
-  background: #ff7200;
+  background: #54ae3e;
   z-index: 1000;
   border-radius: 50%;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
 }
 @media all and (max-width: 56em) {
-  /* line 151, ../sass/_sidebar.scss */
+  /* line 157, ../sass/_sidebar.scss */
   .toggle-sidebar {
-    display: block;
+    left: 0 !important;
   }
 }
-/* line 170, ../sass/_sidebar.scss */
+/* line 177, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.8325em 0 0 0.8325em;
 }
 
-/* line 179, ../sass/_sidebar.scss */
+/* line 186, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -842,16 +839,16 @@ SUPER SLICK TRANSFORMS
   float: left;
   opacity: .5;
 }
-/* line 190, ../sass/_sidebar.scss */
+/* line 197, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 193, ../sass/_sidebar.scss */
+/* line 200, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 199, ../sass/_sidebar.scss */
+/* line 206, ../sass/_sidebar.scss */
 .logo {
   position: absolute;
   top: 1em;
@@ -862,7 +859,7 @@ SUPER SLICK TRANSFORMS
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   padding: 0.8325em;
-  background: #ff7200;
+  background: #54ae3e;
   display: inline-block;
 }
 
@@ -990,7 +987,7 @@ SUPER SLICK TRANSFORMS
 @-webkit-keyframes realtime-anim {
   /* line 144, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #ff7200;
+    border-left: 1px solid #54ae3e;
   }
 
   /* line 145, ../sass/_messages.scss */
@@ -1002,7 +999,7 @@ SUPER SLICK TRANSFORMS
 @-moz-keyframes realtime-anim {
   /* line 148, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #ff7200;
+    border-left: 1px solid #54ae3e;
   }
 
   /* line 149, ../sass/_messages.scss */
@@ -1014,7 +1011,7 @@ SUPER SLICK TRANSFORMS
 @-ms-keyframes realtime-anim {
   /* line 152, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #ff7200;
+    border-left: 1px solid #54ae3e;
   }
 
   /* line 153, ../sass/_messages.scss */
@@ -1026,7 +1023,7 @@ SUPER SLICK TRANSFORMS
 @-o-keyframes realtime-anim {
   /* line 156, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #ff7200;
+    border-left: 1px solid #54ae3e;
   }
 
   /* line 157, ../sass/_messages.scss */
@@ -1038,7 +1035,7 @@ SUPER SLICK TRANSFORMS
 @keyframes realtime-anim {
   /* line 160, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #ff7200;
+    border-left: 1px solid #54ae3e;
   }
 
   /* line 161, ../sass/_messages.scss */
@@ -1176,13 +1173,13 @@ input {
 }
 /* line 29, ../sass/_general.scss */
 ::selection {
-  background: #ff7200;
+  background: #54ae3e;
   color: inherit;
 }
 
 /* line 30, ../sass/_general.scss */
 ::-moz-selection {
-  background: #ff7200;
+  background: #54ae3e;
   color: inherit;
 }
 
