--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -11,7 +11,7 @@ $color-main:#EB8A48;//orange-brown
 $color-main:#FF7200;//orange
 $color-main:#E4582A;//red
 $color-main:#59A029;//dark green
-$color-main:#54AE3E;//green
+$color-main:#6EC633;//green
 
 
 
