--- a/css/main.css
+++ b/css/main.css
@@ -476,7 +476,7 @@ SUPER SLICK TRANSFORMS
 /* line 1, ../sass/_welcome.scss */
 .welcome-mast {
   color: white;
-  background: #54ae3e;
+  background: #6ec633;
   color: black;
   text-align: center;
   position: relative;
@@ -618,6 +618,11 @@ SUPER SLICK TRANSFORMS
   padding: .66em;
   border-top-right-radius: 0px;
   border-top-left-radius: 0px;
+  -webkit-transition: all 333ms linear;
+  -moz-transition: all 333ms linear;
+  -ms-transition: all 333ms linear;
+  -o-transition: all 333ms linear;
+  transition: all 333ms linear;
 }
 @media all and (max-width: 32em) {
   /* line 1, ../sass/_room.scss */
@@ -633,7 +638,7 @@ SUPER SLICK TRANSFORMS
   -o-filter: blur(3px);
   -ms-filter: blur(3px);
   filter: blur(3px);
-  opacity: 0.3;
+  opacity: 0.5;
 }
 
 /* line 39, ../sass/_room.scss */
@@ -664,12 +669,10 @@ SUPER SLICK TRANSFORMS
   top: 0;
   bottom: 0;
   z-index: 99;
-  overflow: hidden;
   /*padding top 5em to  push it away from .toggle-*/
   padding: 5em 1em 4em;
   margin-bottom: -2em;
   overflow-y: auto;
-  opacity: 0;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -ms-transition: all .3s ease-in-out;
@@ -683,16 +686,24 @@ SUPER SLICK TRANSFORMS
     padding: 5em 2em 4em;
   }
 }
-/* line 30, ../sass/_sidebar.scss */
+/* line 28, ../sass/_sidebar.scss */
 .fixed-sidebar.show {
   width: 15em;
   z-index: 900;
   opacity: 1;
   box-shadow: 3em 0em 4em 0em lightgrey;
 }
+/* line 38, ../sass/_sidebar.scss */
+.fixed-sidebar:hover {
+  opacity: 1;
+}
+/* line 40, ../sass/_sidebar.scss */
+.fixed-sidebar:hover .online-users-count {
+  opacity: 1 !important;
+}
 
 @media all and (max-width: 56em) {
-  /* line 49, ../sass/_sidebar.scss */
+  /* line 47, ../sass/_sidebar.scss */
   .csstransforms .fixed-sidebar.show {
     -webkit-transform: translateX(13em);
     -moz-transform: translateX(13em);
@@ -704,25 +715,25 @@ SUPER SLICK TRANSFORMS
 }
 
 @media all and (max-width: 56em) {
-  /* line 62, ../sass/_sidebar.scss */
+  /* line 60, ../sass/_sidebar.scss */
   .no-csstransforms .fixed-sidebar.show {
     left: 0 !important;
     background: white;
   }
 }
 
-/* line 69, ../sass/_sidebar.scss */
+/* line 67, ../sass/_sidebar.scss */
 .userinfo {
   text-align: center;
 }
-/* line 71, ../sass/_sidebar.scss */
+/* line 69, ../sass/_sidebar.scss */
 .userinfo .user-avatar {
   height: 3em;
   border: 1px solid black;
   border-radius: 50%;
   overflow: hidden;
 }
-/* line 78, ../sass/_sidebar.scss */
+/* line 76, ../sass/_sidebar.scss */
 .userinfo .user-username {
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -730,14 +741,14 @@ SUPER SLICK TRANSFORMS
   display: block;
 }
 
-/* line 86, ../sass/_sidebar.scss */
+/* line 84, ../sass/_sidebar.scss */
 #logout, #toggleRealtime {
   float: left;
   margin-left: 0.3em;
   margin-top: 0.6em;
 }
 
-/* line 96, ../sass/_sidebar.scss */
+/* line 94, ../sass/_sidebar.scss */
 .realtime-image {
   height: 1.3em;
   width: 1.3em;
@@ -745,14 +756,14 @@ SUPER SLICK TRANSFORMS
   margin-bottom: -.325em;
 }
 
-/* line 104, ../sass/_sidebar.scss */
+/* line 102, ../sass/_sidebar.scss */
 .online-users {
   margin-top: 2em;
   text-align: left;
   list-style-type: none;
 }
 
-/* line 109, ../sass/_sidebar.scss */
+/* line 107, ../sass/_sidebar.scss */
 .online-user {
   display: block;
   text-overflow: ellipsis;
@@ -761,25 +772,27 @@ SUPER SLICK TRANSFORMS
   color: #444;
 }
 
-/* line 117, ../sass/_sidebar.scss */
+/* line 115, ../sass/_sidebar.scss */
 .online-users {
   float: right;
   width: 100%;
 }
 
-/* line 122, ../sass/_sidebar.scss */
+/* line 120, ../sass/_sidebar.scss */
 .online-users-count {
   color: white;
   font-weight: bold;
   font-family: 'Source Sans Pro', sans-serif;
   padding: .5em .8em .5em;
-  background: #54ae3e;
+  background: #6ec633;
   display: inline-block;
   border-radius: 50%;
   position: fixed;
   left: 0em;
-  top: 3.7em;
+  top: 4.8em;
   z-index: 998;
+  border: 0.1em solid #579d29;
+  box-shadow: .05em 0em .5em 0em lightgrey;
   /*sadly no transition because it would be 
   	positioned *again* when a heartbeat happens,
   	will be fixed, soon
@@ -793,7 +806,7 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 56em) {
-  /* line 122, ../sass/_sidebar.scss */
+  /* line 120, ../sass/_sidebar.scss */
   .online-users-count {
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
@@ -802,34 +815,38 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 157, ../sass/_sidebar.scss */
+/* line 159, ../sass/_sidebar.scss */
 .toggle-sidebar {
+  display: none;
   cursor: pointer;
   left: 0;
-  top: .5em;
+  top: 1.5em;
   position: fixed;
   height: 3.33em;
   width: 3.33em;
-  background: #54ae3e;
+  background: #6ec633;
   z-index: 1000;
   border-radius: 50%;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
+  border: 0.1em solid #579d29;
+  box-shadow: .05em 0em .5em 0em lightgrey;
 }
 @media all and (max-width: 56em) {
-  /* line 157, ../sass/_sidebar.scss */
+  /* line 159, ../sass/_sidebar.scss */
   .toggle-sidebar {
+    display: block;
     left: 0 !important;
   }
 }
-/* line 177, ../sass/_sidebar.scss */
+/* line 184, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
-  margin: 0.8325em 0 0 0.8325em;
+  margin: 0.7325em 0 0 0.7325em;
 }
 
-/* line 186, ../sass/_sidebar.scss */
+/* line 194, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -839,28 +856,28 @@ SUPER SLICK TRANSFORMS
   float: left;
   opacity: .5;
 }
-/* line 197, ../sass/_sidebar.scss */
+/* line 205, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 200, ../sass/_sidebar.scss */
+/* line 208, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 206, ../sass/_sidebar.scss */
+/* line 214, ../sass/_sidebar.scss */
 .logo {
   position: absolute;
-  top: 1em;
-  right: 0;
+  top: 1.5em;
+  right: 1em;
   height: 3.33em;
   width: 3.33em;
   border-radius: 50%;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
   padding: 0.8325em;
-  background: #54ae3e;
+  background: #6ec633;
   display: inline-block;
+  border: 0.1em solid #579d29;
+  box-shadow: .05em 0em .5em 0em lightgrey;
 }
 
 /* line 1, ../sass/_messages.scss */
@@ -987,7 +1004,7 @@ SUPER SLICK TRANSFORMS
 @-webkit-keyframes realtime-anim {
   /* line 144, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #54ae3e;
+    border-left: 1px solid #6ec633;
   }
 
   /* line 145, ../sass/_messages.scss */
@@ -999,7 +1016,7 @@ SUPER SLICK TRANSFORMS
 @-moz-keyframes realtime-anim {
   /* line 148, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #54ae3e;
+    border-left: 1px solid #6ec633;
   }
 
   /* line 149, ../sass/_messages.scss */
@@ -1011,7 +1028,7 @@ SUPER SLICK TRANSFORMS
 @-ms-keyframes realtime-anim {
   /* line 152, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #54ae3e;
+    border-left: 1px solid #6ec633;
   }
 
   /* line 153, ../sass/_messages.scss */
@@ -1023,7 +1040,7 @@ SUPER SLICK TRANSFORMS
 @-o-keyframes realtime-anim {
   /* line 156, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #54ae3e;
+    border-left: 1px solid #6ec633;
   }
 
   /* line 157, ../sass/_messages.scss */
@@ -1035,7 +1052,7 @@ SUPER SLICK TRANSFORMS
 @keyframes realtime-anim {
   /* line 160, ../sass/_messages.scss */
   0% {
-    border-left: 1px solid #54ae3e;
+    border-left: 1px solid #6ec633;
   }
 
   /* line 161, ../sass/_messages.scss */
@@ -1155,35 +1172,40 @@ input {
   background: none;
 }
 
+/* line 24, ../sass/_general.scss */
+html {
+  overflow-x: hidden;
+}
+
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 25, ../sass/_general.scss */
+  /* line 28, ../sass/_general.scss */
   ::-webkit-scrollbar {
     width: .777em;
   }
 
-  /* line 26, ../sass/_general.scss */
+  /* line 29, ../sass/_general.scss */
   ::-webkit-scrollbar-track {
     background-color: #999;
   }
 
-  /* line 27, ../sass/_general.scss */
+  /* line 30, ../sass/_general.scss */
   ::-webkit-scrollbar-thumb {
     background: #666;
   }
 }
-/* line 29, ../sass/_general.scss */
+/* line 32, ../sass/_general.scss */
 ::selection {
-  background: #54ae3e;
-  color: inherit;
-}
-
-/* line 30, ../sass/_general.scss */
-::-moz-selection {
-  background: #54ae3e;
+  background: #6ec633;
   color: inherit;
 }
 
 /* line 33, ../sass/_general.scss */
+::-moz-selection {
+  background: #6ec633;
+  color: inherit;
+}
+
+/* line 36, ../sass/_general.scss */
 .debug {
   position: fixed;
   top: 0;
