--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -21,6 +21,9 @@ input{
 	background:none;
 }
 
+html{
+	overflow-x:hidden;
+}
 @media screen and (-webkit-min-device-pixel-ratio:0){
 	::-webkit-scrollbar{width:.777em;} 
 	::-webkit-scrollbar-track{background-color: #999;} 
