--- a/sass/_room.scss
+++ b/sass/_room.scss
@@ -18,11 +18,11 @@
 		margin-right:.5em;
 	}
 
-	// -webkit-transition: all 333ms ease-in-out;
-	// -moz-transition: all 333ms ease-in-out;
-	// -ms-transition: all 333ms ease-in-out;
-	// -o-transition: all 333ms ease-in-out;
-	// transition: all 333ms ease-in-out;
+	-webkit-transition: all 333ms linear;
+	-moz-transition: all 333ms linear;
+	-ms-transition: all 333ms linear;
+	-o-transition: all 333ms linear;
+	transition: all 333ms linear;
 
 	&.under-modal{
 		$blur:3px;
@@ -32,7 +32,7 @@
 	    -ms-filter: blur($blur);
 	    filter: blur($blur);
 	    
-	    opacity: 0.3;
+	    opacity: 0.5;
 	}
 }
 
