--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -32,7 +32,7 @@
 		opacity:1;
 		
 		// box-shadow: 0em .3em 2.5em lightgrey;
-		box-shadow: 3em 0em 4em 0em lightgrey;
+		// box-shadow: 3em 0em 4em 0em lightgrey;
 	}
 
 	&:hover{
