--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -14,6 +14,7 @@ $color-main:#59A029;//dark green
 $color-main:#6EC633;//green
 $color-main:#F0BF00;//yellow
 $color-main:#F78F1E;//orange
+$color-main:#F6BA00;//yelli
 
 
 
