--- a/sass/_welcome.scss
+++ b/sass/_welcome.scss
@@ -21,7 +21,7 @@
 		animation-fill-mode: both;
 
 		h1{
-			color:#eee;
+			color:#222;
 			text-shadow: 5px 5px 20px 50px white;
 			font-family: 'Source Sans Pro', sans-serif;
 		}
